Moved urls to make way for Angular

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
       <!-- Page Content -->
+      <h1>JARVIS</h1>
       <div class="container">
           <div ng-view></div>
       </div>
