--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -6,6 +6,7 @@
 
       <link rel="stylesheet" href="{% static "css/loading-bar.css" %}" />
       <link rel="stylesheet" href="{% static "css/jarvis.css" %}" />
+      <link rel="stylesheet" href="{% static "css/device.css" %}" />
 
       <link href="{% static "css/bootstrap.min.css" %}" type="text/css" rel="stylesheet" />
   </head>
@@ -40,6 +41,7 @@
 
       {# Controllers #}
       <script type="text/javascript" src="{% static "js/startpage.js" %}"></script>
+      <script type="text/javascript" src="{% static "js/device.js" %}"></script>
 
       <script type="text/javascript" src="{% static "js/app.js" %}"></script>
 
