--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -5,18 +5,16 @@
       {% block page_title %}<title>JARVIS</title>{% endblock %}
 
       <link rel="stylesheet" href="{% static "css/loading-bar.css" %}" />
-      <link rel="stylesheet" href="{% static "css/jarvis.css" %}" />
       <link rel="stylesheet" href="{% static "css/device.css" %}" />
 
-      <link href="{% static "css/bootstrap.min.css" %}" type="text/css" rel="stylesheet" />
+      {# Material design, google all-in BABY! #}
+      <link href="{% static "css/angular-material.min.css" %}" type="text/css" rel="stylesheet" />
   </head>
   <body>
       <!-- Page Content -->
-      <div class="container">
-          <div class="row">
-              <div class="col-xs-12">
-                  <h1>JARVIS</h1>
-              </div>
+      <div layout="column">
+          <div layout="row" layout-align="center">
+              <h1>JARVIS</h1>
           </div>
 
           {% comment %}
@@ -34,7 +32,7 @@
       <script type="text/javascript" src="{% static "js/ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js" %}"></script>
 
       <script type="text/javascript" src="{% static "js/angularjs/angular-route.min.js" %}"></script>
-      <script type="text/javascript" src="{% static "js/angularjs/angular-resource.js" %}"></script>
+      <script type="text/javascript" src="{% static "js/angularjs/angular-resource.min.js" %}"></script>
       <script type="text/javascript" src="{% static "js/lib/loading-bar.js" %}"></script>
       <script type="text/javascript" src="{% static "js/lib/lodash.min.js" %}"></script>
       <script type="text/javascript" src="{% static "js/lib/restangular.min.js" %}"></script>
