--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -26,13 +26,15 @@
           </div>
           {% endcomment %}
           <div ng-view></div>
+
       </div>
 
       <script type="text/javascript" src="{% static "js/angularjs/angular.min.js" %}"></script>
-      <script type="text/javascript" src="{% static "js/ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js" %}"></script>
-
       <script type="text/javascript" src="{% static "js/angularjs/angular-route.min.js" %}"></script>
       <script type="text/javascript" src="{% static "js/angularjs/angular-resource.min.js" %}"></script>
+
+      <script type="text/javascript" src="{% static "js/angular-material.min.js" %}"></script>
+
       <script type="text/javascript" src="{% static "js/lib/loading-bar.js" %}"></script>
       <script type="text/javascript" src="{% static "js/lib/lodash.min.js" %}"></script>
       <script type="text/javascript" src="{% static "js/lib/restangular.min.js" %}"></script>
