--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -3,6 +3,7 @@
 <html lang="en" ng-app="jarvis">
   <head>
     <link rel="stylesheet" href="{% static "css/angular-material.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/device.css" %}">
   </head>
   <body layout="column">
     <div ng-view></div>
