--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -30,6 +30,7 @@
 
     <script src="{% static "js/startpage.js" %}"></script>
     <script src="{% static "js/device.js" %}"></script>
+    <script src="{% static "js/sensor.js" %}"></script>
 
     <script src="{% static "js/app.js" %}"></script>
   </body>
