--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -31,6 +31,7 @@
     <script src="{% static "js/startpage.js" %}"></script>
     <script src="{% static "js/device.js" %}"></script>
     <script src="{% static "js/sensor.js" %}"></script>
+    <script src="{% static "js/login.js" %}"></script>
 
     <script src="{% static "js/app.js" %}"></script>
   </body>
