device detail view

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="stylesheet" href="{% static "css/angular-material.min.css" %}">
     <link rel="stylesheet" href="{% static "css/device.css" %}">
+    <link rel="stylesheet" href="{% static "css/jarvis.css" %}">
   </head>
   <body layout="column">
     <div ng-view></div>
