--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static "css/jarvis.css" %}">
   </head>
   <body layout="column">
+    <a href="#/">home</a>
     <div ng-view></div>
 
 
