--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -8,6 +8,8 @@
   </head>
   <body layout="column">
     <a href="#/">home</a>
+    <a href="#/nodes/">nodes</a>
+
     <div ng-view></div>
 
 
@@ -32,6 +34,7 @@
 
     <script src="{% static "js/startpage.js" %}"></script>
     <script src="{% static "js/device.js" %}"></script>
+    <script src="{% static "js/node.js" %}"></script>
     <script src="{% static "js/devicegroup.js" %}"></script>
     <script src="{% static "js/sensor.js" %}"></script>
     <script src="{% static "js/login.js" %}"></script>
