--- a/hub/angular/static/css/jarvis.css
+++ b/hub/angular/static/css/jarvis.css
@@ -5,3 +5,11 @@ div.layout-content{
     max-width: 864px;
     margin: auto;
 }
+
+a, a:visited{
+    color: #3F51B5;
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+}
