--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -1,44 +1,60 @@
 {% load static i18n %}
 
 <html lang="en" ng-app="jarvis">
-  <head>
+<head>
     <link rel="stylesheet" href="{% static "css/angular-material.min.css" %}">
     <link rel="stylesheet" href="{% static "css/device.css" %}">
     <link rel="stylesheet" href="{% static "css/jarvis.css" %}">
-  </head>
-  <body layout="column">
-    <a href="#/">home</a>
-    <a href="#/nodes/">nodes</a>
 
-    <div ng-view></div>
+    <link rel="stylesheet" href="{% static "fonts/weather-icons/css/weather-icons.min.css" %}">
+    <title>YARVIS - Yet Another Rather Very Intelligent System</title>
+</head>
+<body layout="column">
+<md-toolbar>
+    <div layout="row">
+        <div layout="row">
+            <h2 class="md-toolbar-tools">
+                YARVIS
+            </h2>
+        </div>
+        <div layout="row">
+            <div class="md-toolbar-tools">
+                <md-button ng-href="#/">Översikt</md-button>
+                <md-button ng-href="#/nodes/">Noder</md-button>
+            </div>
+        </div>
+    </div>
+</md-toolbar>
+
+<div ng-view></div>
 
 
-    <script type="text/javascript" id="settings">
-          var django = {
-              "base_ng_template_url" : "{% static 'ng-templates' %}/",
-              "base_static_url" : "{% static '' %}",
-              "csrf_token" : "{{ csrf_token }}",
-              "proxy_url" : {% if USE_PROXY %}"{{ PROXY_URL }}"{% else %}""{% endif %}
-          };
-      </script>
-    <!-- Angular Material Dependencies -->
-    <script src="{% static "js/angularjs/angular.min.js" %}"></script>
-    <script src="{% static "js/angularjs/angular-animate.min.js" %}"></script>
-    <script src="{% static "js/angularjs/angular-aria.min.js" %}"></script>
-    <script src="{% static "js/angularjs/angular-route.min.js" %}"></script>
+<script type="text/javascript" id="settings">
+    var django = {
+        "base_ng_template_url" : "{% static 'ng-templates' %}/",
+        "base_static_url" : "{% static '' %}",
+        "csrf_token" : "{{ csrf_token }}",
+        "proxy_url" : {% if USE_PROXY %}"{{ PROXY_URL }}"{% else %}""{% endif %}
+    };
+</script>
+<!-- Angular Material Dependencies -->
+<script src="{% static "js/angularjs/angular.min.js" %}"></script>
+<script src="{% static "js/angularjs/angular-animate.min.js" %}"></script>
+<script src="{% static "js/angularjs/angular-aria.min.js" %}"></script>
+<script src="{% static "js/angularjs/angular-route.min.js" %}"></script>
 
-    <script src="{% static "js/lib/lodash.min.js" %}"></script>
-    <script src="{% static "js/lib/restangular.min.js" %}"></script>
+<script src="{% static "js/lib/lodash.min.js" %}"></script>
+<script src="{% static "js/lib/restangular.min.js" %}"></script>
 
-    <script src="{% static "js/angular-material.min.js" %}"></script>
+<script src="{% static "js/angular-material.min.js" %}"></script>
 
-    <script src="{% static "js/startpage.js" %}"></script>
-    <script src="{% static "js/device.js" %}"></script>
-    <script src="{% static "js/node.js" %}"></script>
-    <script src="{% static "js/devicegroup.js" %}"></script>
-    <script src="{% static "js/sensor.js" %}"></script>
-    <script src="{% static "js/login.js" %}"></script>
+<script src="{% static "js/startpage.js" %}"></script>
+<script src="{% static "js/device.js" %}"></script>
+<script src="{% static "js/node.js" %}"></script>
+<script src="{% static "js/devicegroup.js" %}"></script>
+<script src="{% static "js/sensor.js" %}"></script>
+<script src="{% static "js/login.js" %}"></script>
 
-    <script src="{% static "js/app.js" %}"></script>
-  </body>
+<script src="{% static "js/app.js" %}"></script>
+</body>
 </html>
