Weather management and more

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -20,6 +20,7 @@
         <div layout="row">
             <div class="md-toolbar-tools">
                 <md-button ng-href="#/">Översikt</md-button>
+                <md-button ng-href="#/weather/">Väder</md-button>
                 <md-button ng-href="#/nodes/">Noder</md-button>
             </div>
         </div>
