--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -14,14 +14,22 @@
     <div layout="row">
         <div layout="row">
             <h2 class="md-toolbar-tools">
-                YARVIS
+                <a href="#/" class="logo">YARVIS</a>
             </h2>
         </div>
         <div layout="row">
             <div class="md-toolbar-tools">
                 <md-button ng-href="#/">Översikt</md-button>
                 <md-button ng-href="#/weather/">Väder</md-button>
-                <md-button ng-href="#/nodes/">Noder</md-button>
+                <md-button ng-href="#/rooms/">Rum</md-button>
+                <md-button ng-href="#/lights/">Lampor</md-button>
+                <md-button ng-href="#/appliances/">Apparater</md-button>
+                <md-button ng-href="#/devices/">Enheter</md-button>
+            </div>
+        </div>
+        <div layout="row" flex layout-align="end center">
+            <div>
+                <md-button ng-href="#/settings/">Inställningar</md-button>
             </div>
         </div>
     </div>
@@ -54,6 +62,8 @@
 <script src="{% static "js/node.js" %}"></script>
 <script src="{% static "js/devicegroup.js" %}"></script>
 <script src="{% static "js/sensor.js" %}"></script>
+<script src="{% static "js/weather.js" %}"></script>
+<script src="{% static "js/settings.js" %}"></script>
 <script src="{% static "js/login.js" %}"></script>
 
 <script src="{% static "js/app.js" %}"></script>
