--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="{% static "fonts/weather-icons/css/weather-icons.min.css" %}">
     <title>YARVIS - Yet Another Rather Very Intelligent System</title>
+    <meta name="viewport" content="initial-scale=1" />
 </head>
 <body layout="column">
 <md-toolbar>
