--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -15,13 +15,13 @@
     <div layout="row">
         <div layout="row">
             <h2 class="md-toolbar-tools">
-                <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
+                <md-button ng-click="toggleSidenav('left')" hide-gt-md class="md-icon-button">
                     <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
                 </md-button>
                 <a href="#/" class="logo">YARVIS</a>
             </h2>
         </div>
-        <div layout="row" hide show-gt-sm>
+        <div layout="row" hide show-gt-md>
             <div class="md-toolbar-tools">
                 <md-button ng-href="#/">Översikt</md-button>
                 <md-button ng-href="#/weather/">Väder</md-button>
