Remember with coookies

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -16,7 +16,7 @@
         <div layout="row">
             <h2 class="md-toolbar-tools">
                 <md-button ng-click="toggleSidenav('left')" hide-gt-md class="md-icon-button">
-                    <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
+                    <md-icon aria-label="Menu" md-svg-icon="{% static 'images/icons/menu.svg' %}"></md-icon>
                 </md-button>
                 <a href="#/" class="logo">YARVIS</a>
             </h2>
