--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="{% static "css/jarvis.css" %}">
 
     <link rel="stylesheet" href="{% static "fonts/weather-icons/css/weather-icons.min.css" %}">
-    <title>YARVIS - Yet Another Rather Very Intelligent System</title>
+    <title>YARVIS </title>
     <meta name="viewport" content="initial-scale=1" />
-    <link rel="icon" type="image/png" href="{% static 'images/logo/logo.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'images/logo/logo.png' %}" />
+    <link rel="apple-touch-icon" href="{% static 'images/logo/logo-180.png' %}" />
 </head>
 <body layout="column">
 <md-toolbar>
