--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -1,16 +1,17 @@
 {% load static i18n %}
+{% load version_tags %}
 
 <html lang="en" ng-app="jarvis">
 <head>
-    <link rel="stylesheet" href="{% static "css/angular-material.min.css" %}">
-    <link rel="stylesheet" href="{% static "css/device.css" %}">
-    <link rel="stylesheet" href="{% static "css/jarvis.css" %}">
+    <link rel="stylesheet" href="{% static "css/angular-material.min.css" %}{% version_extension %}">
+    <link rel="stylesheet" href="{% static "css/device.css" %}{% version_extension %}">
+    <link rel="stylesheet" href="{% static "css/jarvis.css" %}{% version_extension %}">
 
-    <link rel="stylesheet" href="{% static "fonts/weather-icons/css/weather-icons.min.css" %}">
-    <title>YARVIS </title>
+    <link rel="stylesheet" href="{% static "fonts/weather-icons/css/weather-icons.min.css" %}{% version_extension %}">
+    <title>YARVIS</title>
     <meta name="viewport" content="initial-scale=1" />
-    <link rel="icon" type="image/png" href="{% static 'images/logo/logo.png' %}" />
-    <link rel="apple-touch-icon" href="{% static 'images/logo/logo-180.png' %}" />
+    <link rel="icon" type="image/png" href="{% static 'images/logo/logo.png' %}{% version_extension %}" />
+    <link rel="apple-touch-icon" href="{% static 'images/logo/logo-180.png' %}{% version_extension %}" />
 </head>
 <body layout="column">
 <md-toolbar>
@@ -49,38 +50,40 @@
         "base_ng_template_url" : "{% static 'ng-templates' %}/",
         "base_static_url" : "{% static '' %}",
         "csrf_token" : "{{ csrf_token }}",
-        "proxy_url" : {% if USE_PROXY %}"{{ PROXY_URL }}"{% else %}""{% endif %}
+        "proxy_url" : {% if USE_PROXY %}"{{ PROXY_URL }}"{% else %}""{% endif %},
+        "version" : "{{ VERSION }}"
     };
 </script>
 <!-- Angular Material Dependencies -->
-<script src="{% static "js/angularjs/angular.min.js" %}"></script>
+<script src="{% static "js/angularjs/angular.min.js" %}{% version_extension %}"></script>
 
 {# AngularJS Core team modules #}
-<script src="{% static "js/angularjs/angular-animate.min.js" %}"></script>
-<script src="{% static "js/angularjs/angular-aria.min.js" %}"></script>
-<script src="{% static "js/angularjs/angular-route.min.js" %}"></script>
-<script src="{% static "js/angularjs/angular-cookies.min.js" %}"></script>
+<script src="{% static "js/angularjs/angular-animate.min.js" %}{% version_extension %}"></script>
+<script src="{% static "js/angularjs/angular-aria.min.js" %}{% version_extension %}"></script>
+<script src="{% static "js/angularjs/angular-route.min.js" %}{% version_extension %}"></script>
+<script src="{% static "js/angularjs/angular-cookies.min.js" %}{% version_extension %}"></script>
 
 {# AngularJS Third party modules #}
-<script src="{% static "js/lib/ngStorage.min.js" %}"></script>
+<script src="{% static "js/lib/ngStorage.min.js" %}{% version_extension %}"></script>
 
 {# Third party helpers and libraries #}
-<script src="{% static "js/lib/lodash.min.js" %}"></script>
-<script src="{% static "js/lib/restangular.min.js" %}"></script>
+<script src="{% static "js/lib/lodash.min.js" %}{% version_extension %}"></script>
+<script src="{% static "js/lib/restangular.min.js" %}{% version_extension %}"></script>
 
 {# UI Libraries #}
-<script src="{% static "js/angular-material.min.js" %}"></script>
+<script src="{% static "js/angular-material.min.js" %}{% version_extension %}"></script>
 
 {# YARVIS controllers #}
-<script src="{% static "js/startpage.js" %}"></script>
-<script src="{% static "js/device.js" %}"></script>
-<script src="{% static "js/node.js" %}"></script>
-<script src="{% static "js/devicegroup.js" %}"></script>
-<script src="{% static "js/sensor.js" %}"></script>
-<script src="{% static "js/weather.js" %}"></script>
-<script src="{% static "js/settings.js" %}"></script>
-<script src="{% static "js/login.js" %}"></script>
+<script src="{% static "js/startpage.js" %}{% version_extension %}"></script>
+<script src="{% static "js/device.js" %}{% version_extension %}"></script>
+<script src="{% static "js/node.js" %}{% version_extension %}"></script>
+<script src="{% static "js/devicegroup.js" %}{% version_extension %}"></script>
+<script src="{% static "js/sensor.js" %}{% version_extension %}"></script>
+<script src="{% static "js/weather.js" %}{% version_extension %}"></script>
+<script src="{% static "js/settings.js" %}{% version_extension %}"></script>
+<script src="{% static "js/login.js" %}{% version_extension %}"></script>
 
-<script src="{% static "js/app.js" %}"></script>
+{# Main Angular App #}
+<script src="{% static "js/app.js" %}{% version_extension %}"></script>
 </body>
 </html>
