--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -36,7 +36,7 @@
         </div>
         <div layout="row" flex layout-align="end center" hide show-gt-sm>
             <div>
-                <md-button ng-href="#/settings/">Inställningar</md-button>
+                <md-button ng-href="#/administration/">Administration</md-button>
             </div>
         </div>
     </div>
@@ -80,8 +80,9 @@
 <script src="{% static "js/devicegroup.js" %}{% version_extension %}"></script>
 <script src="{% static "js/sensor.js" %}{% version_extension %}"></script>
 <script src="{% static "js/weather.js" %}{% version_extension %}"></script>
-<script src="{% static "js/settings.js" %}{% version_extension %}"></script>
+<script src="{% static "js/admin.js" %}{% version_extension %}"></script>
 <script src="{% static "js/login.js" %}{% version_extension %}"></script>
+<script src="{% static "js/signals.js" %}{% version_extension %}"></script>
 
 {# Main Angular App #}
 <script src="{% static "js/app.js" %}{% version_extension %}"></script>
