test stab at this progressive stuff

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -54,6 +54,9 @@
         "version" : "{{ VERSION }}"
     };
 </script>
+
+<script src="{% static "bootstrap.js" %}"></script>
+
 {# AngularJS Core #}
 <script src="{% static "js/angularjs/angular.min.js" %}{% version_extension %}"></script>
 
