--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -12,6 +12,8 @@
     <meta name="viewport" content="initial-scale=1" />
     <link rel="icon" type="image/png" href="{% static 'images/logo/logo.png' %}{% version_extension %}" />
     <link rel="apple-touch-icon" href="{% static 'images/logo/logo-180.png' %}{% version_extension %}" />
+
+    <link rel="manifest" href="{% static "manifest.json" %}">
 </head>
 <body layout="column">
 <md-toolbar>
