Added api for manifest json file, no static

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" href="{% static 'images/logo/logo.png' %}{% version_extension %}" />
     <link rel="apple-touch-icon" href="{% static 'images/logo/logo-180.png' %}{% version_extension %}" />
 
-    <link rel="manifest" href="{% static "manifest.json" %}">
+    <link rel="manifest" href="{% url 'manifest-json' %}">
 </head>
 <body layout="column">
 <md-toolbar>
