First attempt on having a focus service

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -73,6 +73,7 @@
 
 {# AngularJS Third party modules #}
 <script src="{% static "js/lib/ngStorage.min.js" %}{% version_extension %}"></script>
+<script src="{% static "js/focus.js" %}{% version_extension %}"></script>
 
 {# Third party helpers and libraries #}
 <script src="{% static "js/lib/lodash.min.js" %}{% version_extension %}"></script>
