Test with polyfill

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -71,13 +71,14 @@
 <script src="{% static "js/angularjs/angular-route.min.js" %}{% version_extension %}"></script>
 <script src="{% static "js/angularjs/angular-cookies.min.js" %}{% version_extension %}"></script>
 
-{# AngularJS Third party modules #}
-<script src="{% static "js/lib/ngStorage.min.js" %}{% version_extension %}"></script>
-<script src="{% static "js/focus.js" %}{% version_extension %}"></script>
-
 {# Third party helpers and libraries #}
 <script src="{% static "js/lib/lodash.min.js" %}{% version_extension %}"></script>
 <script src="{% static "js/lib/restangular.min.js" %}{% version_extension %}"></script>
+<script src="{% static "js/lib/visibly.js" %}{% version_extension %}"></script>
+
+{# AngularJS Third party modules #}
+<script src="{% static "js/lib/ngStorage.min.js" %}{% version_extension %}"></script>
+<script src="{% static "js/focus.js" %}{% version_extension %}"></script>
 
 {# UI Libraries #}
 <script src="{% static "js/angular-material.min.js" %}{% version_extension %}"></script>
