Updated theme color in html

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -14,7 +14,7 @@
     {# for mobile renderers #}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {# theme color for progressive apps #}
-    <meta name="theme-color" content="#db5945">
+    <meta name="theme-color" content="#673AB7">
     <link rel="icon" type="image/png" href="{% static 'images/logo/logo.png' %}{% version_extension %}" />
     <link rel="apple-touch-icon" href="{% static 'images/logo/logo-180.png' %}{% version_extension %}" />
 
