--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" media="all" href="{% static "css/jarvis.css" %}{% version_extension %}">
 
     <link rel="stylesheet" media="all" href="{% static "fonts/weather-icons/css/weather-icons.min.css" %}{% version_extension %}">
+    <link rel="stylesheet" media="all" href="{% static "fonts/weather-icons/css/weather-icons-wind.min.css" %}{% version_extension %}">
     <title>YARVIS</title>
     {# for mobile renderers #}
     <meta name="viewport" content="width=device-width, initial-scale=1">
