Show if a sensor is old and update only devices that have been changed since last time

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -84,6 +84,7 @@
 <script src="{% static "js/lib/restangular.min.js" %}{% version_extension %}"></script>
 <script src="{% static "js/lib/visibly.js" %}{% version_extension %}"></script>
 <script src="{% static "js/lib/loading-bar.min.js" %}{% version_extension %}"></script>
+<script src="{% static "js/lib/moment.js" %}{% version_extension %}"></script>
 
 {# AngularJS Third party modules #}
 <script src="{% static "js/lib/ngStorage.min.js" %}{% version_extension %}"></script>
