Show mean values in frontpage

--- a/hub/angular/templates/index.html
+++ b/hub/angular/templates/index.html
@@ -93,6 +93,10 @@
 {# UI Libraries #}
 <script src="{% static "js/angular-material.min.js" %}{% version_extension %}"></script>
 
+{# Highcharts #}
+<script src="{% static "js/lib/highcharts.js" %}{% version_extension %}"></script>
+
+
 {# YARVIS controllers #}
 <script src="{% static "js/startpage.js" %}{% version_extension %}"></script>
 <script src="{% static "js/device.js" %}{% version_extension %}"></script>
